--- a/package.json
+++ b/package.json
@@ -57,7 +57,12 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "svelte": "latest",
+    "vue-router": "latest",
+    "@sveltejs/kit": "latest",
+    "@remix-run/react": "latest",
+    "@vercel/analytics": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
